--- a/src/tags/app-menu/app-menu.module.scss
+++ b/src/tags/app-menu/app-menu.module.scss
@@ -21,6 +21,10 @@ $fixed-controls-height: 6rem;
     visibility: visible;
     z-index: 2;
   }
+
+  .nav {
+    scrollbar-width: thin;
+  }
 }
 
 .nav {
